# ClassPractice-Master

./: .gitignore  LICENSE  README.md
ComputerArchitecture/: HW2_2.25.c  README.md  memory_benchmark.csv  plot_memory_benchmark.py  run_benchmark_and_plot.ps1  tlb_analysis_summary.txt  tlb_assoc_benchmark.csv
DeepLearning/: .gitignore  DEVELOPEMENT.md  FINAL_SUBMISSION_GUIDE.md  Mid-Term Programming Exam.md  Midterm Programming 202604.docx  README.md  data_loading.py  evaluation.py  main.py  models.py  models_training.py  preprocessing.py  requirements.txt
DeepLearning/scripts/: grid_search_mlp_resnet.sh
ImageProcessing/: .gitignore
ImageProcessing/HW3_Image_Restoration/: HW3_Image_Restoration.spec  README.md  build_exe.bat  main.py  pyproject.toml
ImageProcessing/HW3_Image_Restoration/pyinstaller_hooks/: hook-_ctypes.py
ImageProcessing/HW3_Image_Restoration/src/: __init__.py
ImageProcessing/HW3_Image_Restoration/src/pipeline/: __init__.py  processing_pipeline.py
ImageProcessing/HW3_Image_Restoration/src/restoration/: __init__.py  inverse_filter.py  wiener_filter.py
ImageProcessing/HW3_Image_Restoration/src/schemas/: __init__.py  restoration_results_schema.py
ImageProcessing/HW3_Image_Restoration/src/ui/: __init__.py  gui.py  visualization.py
ImageProcessing/HW3_Image_Restoration/src/utils/: __init__.py  image_utils.py  logging_config.py
PatternRecognition/: pr25hw1_614410073_2.m  pr25hw1_614410073_3.m  pr25hw1_614410073_4ab.m  pr25hw1_614410073_4c.m  pr25hw2_614410073_3.m  pr25hw2_614410073_4.m  pr25hw3_614410073_2.m
(+71 files in other folders)
